<?xml version="1.0" encoding="utf-8"?>
<!--Nikolaj Alexander Gilstrøm - S1630425-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        />

<!--   Controls -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:layout_centerInParent="true"
            android:id="@+id/filter"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/filter"
            android:inputType="text"
            android:padding="10dp"
            android:imeOptions="actionSearch"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="screen"
            android:autofillHints="">
        </EditText>
        <Button
            android:id="@+id/current_button"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="@string/current_button"
            android:layout_toStartOf="@+id/planned_button"
            android:layout_margin="2dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColorHint="@color/lightText"
            android:padding="10dp">
        </Button>
        <Button
            android:id="@+id/planned_button"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:hint="@string/planned_button"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColorHint="@color/lightText"
            android:layout_margin="2dp"
            android:padding="10dp">
        </Button>
        <Button
            android:id="@+id/incidents_button"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/planned_button"
            android:hint="@string/incidents_button"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColorHint="@color/lightText"
            android:layout_margin="2dp"
            android:padding="10dp">
        </Button>
    </RelativeLayout>


<!--    Corner matriculation number -->
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:visibility="visible"
        tools:visibility="visible"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:layout_marginLeft="75dp"
        android:layout_marginBottom="5dp"
        />
</RelativeLayout>